# FatPressor

./: .gitignore  CMakeLists.txt  README.md  spec.yaml
.github/workflows/: build-windows.yml
.vybr/: progress.yaml
.vybr/enhancements/: ENHANCE-001.md
.vybr/issues/: ISSUE-002.md
installer/: FatPressor.iss
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/dsp/: EnvelopeFollower.h  GainComputer.h  SidechainDetector.h  TransformerColoration.h  TubeSaturation.h
ui/: mockup-final.html  mockup-v1.html  mockup-v1.yaml  mockup-v2.html
ui/public/: index.html
ui/public/css/: style.css
ui/public/js/: main.js
